# mcp-server

./: .gitignore  .mcpbignore  Dockerfile  Makefile  Pipfile  README.md  docker-bake.hcl  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: discord-notification.yaml  preview.yaml  release.yaml
server/: config.yaml  main.py  run.bat  run.py  run.sh
server/context/: actions.md  expressions.md  fields.md  functions.md  operators.md  values.md
server/prompts/: gen_from_cve.txt  gen_from_desc.txt  gen_smart_firewall.txt
server/waf_rule_mcp/: config.py  cve_source_manager.py  resource_updater.py  tools.py
server/waf_rule_mcp/plugins/: plugin_manager.py  projectdiscovery.py
server/waf_rule_mpc/: config.py  cve_source_manager.py  prompt_manager.py  resource_updater.py  tools.py  waf_context_manager.py
server/waf_rule_mpc/plugins/: __init__.py  base.py  nuclei_opensource.py
tests/: conftest.py  test_rules_validator_unit.py
tests/e2e/: test_rules_validator_e2e.py
